# fs2open.github.com

./: .gitignore  CMakeLists.txt  Makefile  acinclude.m4  configure.ac
cmake/: generateHeaders.cmake
code/: CMakeLists.txt  Makefile.am  source_groups.cmake
code/ai/: aicode.cpp  aigoals.cpp
code/anim/: animplay.cpp
code/cfile/: cfile.cpp  cfile.h  cfilesystem.cpp
code/cmdline/: cmdline.cpp  cmdline.h
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp
code/cutscene/: Decoder.h  mveplayer.cpp  player.cpp
code/cutscene/ffmpeg/: AudioDecoder.h  FFMPEGDecoder.h  VideoDecoder.h  internal.h
code/cutscene/player/: OpenGLVideoPresenter.h
code/directx/: vddraw.h  vdplay.h  vdplobby.h  vdsetup.h
code/fireball/: fireballs.cpp
code/fred2/: sexp_tree.cpp  sexp_tree.h
code/freespace2/: freespace.cpp
code/gamesequence/: gamesequence.cpp
code/gamesnd/: eventmusic.cpp
code/globalincs/: pstypes.h  scp_defines.h  windebug.cpp
code/graphics/: 2d.cpp  gropengl.cpp  gropengl.h  gropenglbmpman.cpp  gropengldraw.cpp  gropenglextension.cpp  gropenglpostprocessing.cpp  gropenglshader.cpp  gropenglshader.h  gropenglstate.cpp  gropenglstate.h  gropengltexture.cpp  gropengltnl.cpp
code/graphics/opengl/: ShaderProgram.h
code/graphics/paths/: NVGRenderer.h  StubRenderer.h
code/graphics/software/: FontManager.h  NVGFont.h  VFNTFont.h
code/hud/: hudartillery.cpp
code/inetfile/: cftp.cpp  chttpget.cpp
code/io/: joy-unix.cpp  key.cpp  key.h  mouse.cpp  mouse.h
code/jpgutils/: jpgutils.cpp
code/lab/: lab.cpp
code/lighting/: lighting.cpp  lighting.h
code/menuui/: mainhallmenu.cpp
code/mission/: missioncampaign.cpp  missionmessage.cpp  missionparse.cpp  missiontraining.cpp
code/missionui/: missionscreencommon.cpp  missionshipchoice.cpp  missionweaponchoice.cpp
code/mm/: msacm.h
code/model/: modelinterp.cpp  modelread.cpp
code/nebula/: neb.cpp
code/network/: multi_voice.cpp  psnet.cpp  psnet2.cpp  stand_gui.cpp
code/object/: object.cpp  objectsnd.cpp
code/osapi/: osapi.cpp  osapi_unix.cpp  outwnd.cpp  outwnd.h  outwnd_unix.cpp
code/parse/: lua.cpp  lua.h  scripting.cpp  scripting.h  sexp.cpp  sexp.h
code/particle/: ParticleSourceWrapper.h
code/particle/effects/: ConeShape.h  SingleParticleEffect.h  SphereShape.h
code/ship/: ship.cpp  ship.h
code/sound/: acm-openal.cpp  audiostr-openal.cpp  audiostr.h  ds.cpp  ds.h  ds3d.cpp  dscap.cpp  rtvoice.cpp  sound.cpp  sound.h
code/sound/ogg/: ogg.cpp
code/weapon/: weapon.h  weapons.cpp
code/windows_stub/: config.h  stubs.cpp
freespace2/: CMakeLists.txt  SDLGraphicsOperations.cpp  freespace.cpp
lib/: CMakeLists.txt
wxfred2/: CMakeLists.txt
